--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vueuse/core": "^12.7.0",
     "bootstrap": "^5.3.3",
     "nuxt": "^3.15.4",
     "vue": "latest",
