--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.10.1",
     "@popperjs/core": "^2.11.8",
     "@vueuse/core": "^12.7.0",
     "bootstrap": "^5.3.3",
